[package]
name = "consensus"
version = "0.1.0"
description = "Double-layered consensus mechanism for the DAGchain"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
structopt = "0.3.26"
bincode = "1.3.3"
crypto = { path = "../crypto" }
storage = { path = "../storage" }
