[package]
name = "crypto"
version = "0.1.0"
description = "Cryptographic primitives for the DAG chain"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
blake2b_simd = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
bytes = "1.1.0"
rand = "0.8.5"
bincode = "1.3.3"
hex = "0.4.3"
bls-signatures = "0.11.3"
