[package]
name = "p2p"
version = "0.1.0"
description = "Peer-to-peer (P2P) library for the DAGchain"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
bincode = "1.3.3"
multibase = "0.9.1"
qp2p = "0.28.7"
structopt = "0.3.26"
serde_json = "1.0.81"
crossbeam-channel = "0.5.5"
serde = "1.0.137"
crypto = { path = "../crypto" }
consensus = { path = "../consensus" }