[package]
name = "storage"
version = "0.1.0"
description = "Simple storage mechanism for DAGchain"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
sled = "0.34.7"
crypto = { path = "../crypto" }
